html and mobile styles has done

--- a/app/index.html
+++ b/app/index.html
@@ -9,37 +9,474 @@
 
     <title>Title</title>
 
+    <link rel="stylesheet" href="css/swiper.min.css">
     <link rel="stylesheet" href="css/index.css">
 
 </head>
 <body>
 
-    <!-- site -->
-    <div class="site">
+<!-- site -->
+<div class="site">
 
-    </div>
-    <!-- /site -->
+    <!-- site__header -->
+    <header class="site__header">
 
-    <!-- popup -->
-    <div class="popup">
+        <!-- logo -->
+        <div class="logo">
+            <img src="img/logo.png" alt="kaigo">
+        </div>
+        <!-- /logo -->
 
-        <!-- popup__wrap -->
-        <div class="popup__wrap">
+        <!-- menu -->
+        <nav class="menu">
 
-            <!-- popup__content -->
-            <div class="popup__content popup__text">
+            <!-- menu__btn -->
+            <span class="menu__btn"><span></span></span>
+            <!-- /menu__btn -->
+
+            <!-- menu__wrap -->
+            <div class="menu__wrap">
+
+                <!-- menu__item -->
+                <div class="menu__item active"><a href="#hero">Become a partner</a></div>
+                <!-- /menu__item -->
+
+                <!-- menu__item -->
+                <div class="menu__item"><a href="#testimonials">Gift an experience</a></div>
+                <!-- /menu__item -->
+
+                <!-- menu__item -->
+                <div class="menu__item"><a href="#sign">Log in</a></div>
+                <!-- /menu__item -->
+
+                <!-- menu__item -->
+                <div class="menu__item"><a class="btn" href="#contact-us">Sign up for free</a></div>
+                <!-- /menu__item -->
 
             </div>
-            <!-- /popup__content -->
+            <!-- /menu__wrap -->
 
-        </div>
-        <!-- /popup__wrap -->
+        </nav>
+        <!-- /menu -->
+
+    </header>
+    <!-- /site__header -->
+
+    <!-- hero -->
+    <div class="hero" id="hero">
+
+       <!-- hero__wrap -->
+       <div class="hero__wrap">
+           <!-- hero__title -->
+           <div class="hero__title">
+               KAIGO
+               LIVE WELL.
+               <span>ALWAYS</span>
+           </div>
+           <!-- /hero__title -->
+
+           <p>A radically different approach to living a healthy life.</p>
+
+           <!-- hero__btns -->
+           <div class="hero__btns">
+               <a href="#" class="hero__app-btn"><img src="img/app-store.png" alt="app store"></a>
+
+               <a href="#">Learn More</a>
+           </div>
+           <!-- /hero__btns -->
+       </div>
+       <!-- /hero__wrap -->
 
     </div>
-    <!-- /popup -->
+    <!-- /hero -->
+
+    <!-- sign -->
+    <div class="sign" id="sign">
+
+        <!-- sign__title -->
+        <div class="sign__title">
+            “Healing begins with making
+            personal connections”
+        </div>
+        <!-- /sign__title -->
+
+        <p>We built Kaigo to strengthen personal connections between you, those you care for and those that care for
+            you.</p>
+
+        <!-- sign__signature -->
+        <div class="sign__signature">
+            <img src="img/sign-signature.png" alt="signature">
+            <strong>Chima U.</strong>
+        </div>
+        <!-- /sign__signature -->
+    </div>
+    <!-- /sign -->
+
+    <!-- what -->
+    <div class="what" id="what">
+
+        <!-- what__content -->
+        <div class="what__content">
+
+            <!-- what__title -->
+            <div class="what__title">
+                What We Do
+            </div>
+            <!-- /what__title -->
+
+            <p>Kaigo pairs busy individuals (that’s you) with a team of experienced and carefully vetted health and
+                wellness professionals in your local community.</p>
+
+            <p>Through collaboration, your team creates a personalized plan and delivers memorable experiences that
+                encourage you to live well, always.</p>
+
+            <a class="what__more" href="#">See what our community is saying</a>
+        </div>
+        <!-- /what__content -->
+
+        <!-- what__pic -->
+        <div class="what__pic" style="background-image: url(img/what-pic.jpg)"></div>
+        <!-- /what__pic -->
+
+    </div>
+    <!-- /what -->
+
+    <!-- meet -->
+    <div class="meet" id="meet">
+
+        <!-- meet__content -->
+        <div class="meet__content">
+
+            <!-- meet__title -->
+            <div class="meet__title">
+                Meet Your
+                <img src="img/Kaigo.png" alt="kaigo">
+            </div>
+            <!-- /meet__title -->
+
+            <p>Your dedicated Kaigo Personal Health Concierge coordinates and takes care of all your health and wellness
+                needs giving you the opportunity to form deeper connections with those you love.</p>
+
+            <ul>
+                <li>A highly trained, experienced and carefully vetted health and wellness professional.</li>
+                <li>Located close to you and gets to know your preferences and is trained to be your trusted sidekick
+                </li>
+                <li>Less than 15% of applicants are accepted into our wellness and hospitality program</li>
+            </ul>
+
+            <a href="#" class="meet__more">Meet Your Kaigo</a>
+        </div>
+        <!-- /meet__content -->
+
+        <!-- meet__pic -->
+        <div class="meet__pic" style="background-image: url(img/meet-pic.jpg)"></div>
+        <!-- /meet__pic -->
+
+    </div>
+    <!-- /meet -->
+
+    <!-- logos -->
+    <div class="logos" id="logos">
+
+        <!-- logos__title -->
+        <div class="logos__title">
+            Read how we are changing healthcare
+        </div>
+        <!-- /logos__title -->
+
+        <!-- logos__list -->
+        <div class="logos__list">
+
+            <!-- logos__item -->
+            <div class="logos__item">
+                <img src="pic/logos/pic1.png" alt="">
+            </div>
+            <!-- /logos__item -->
+
+            <!-- logos__item -->
+            <div class="logos__item">
+                <img src="pic/logos/pic2.png" alt="">
+            </div>
+            <!-- /logos__item -->
+
+            <!-- logos__item -->
+            <div class="logos__item">
+                <img src="pic/logos/pic3.png" alt="">
+            </div>
+            <!-- /logos__item -->
+
+            <!-- logos__item -->
+            <div class="logos__item">
+                <img src="pic/logos/pic4.png" alt="">
+            </div>
+            <!-- /logos__item -->
+
+            <!-- logos__item -->
+            <div class="logos__item">
+                <img src="pic/logos/pic5.png" alt="">
+            </div>
+            <!-- /logos__item -->
+
+        </div>
+        <!-- /logos__list -->
+
+    </div>
+    <!-- /logos -->
+
+    <!-- how -->
+    <div class="how" id="how">
+
+        <!-- how__title -->
+        <div class="how__title">
+            How It Works
+        </div>
+        <!-- /how__title -->
+
+        <!-- how__list -->
+        <div class="how__list">
+
+            <!-- how__item -->
+            <div class="how__item">
+                <p>Subscribe for free and connect with your Kaigo Personal Health Concierge</p>
+                <img src="pic/how/pic1.jpg" alt="">
+            </div>
+            <!-- /how__item -->
+
+            <!-- how__item -->
+            <div class="how__item">
+                <p>Kaigo will assess your needs and build a local health and wellness team that suits you.</p>
+                <img src="pic/how/pic2.jpg" alt="">
+            </div>
+            <!-- /how__item -->
+
+            <!-- how__item -->
+            <div class="how__item">
+                <p>Your team collaborates with action plans that get you on track towards attaining your optimal
+                    health</p>
+                <img src="pic/how/pic3.jpg" alt="">
+            </div>
+            <!-- /how__item -->
+
+            <!-- how__item -->
+            <div class="how__item">
+                <p>Your team of intuitive people handles all of your health and wellness needs giving you time to
+                    live well, always.</p>
+                <img src="pic/how/pic4.jpg" alt="">
+            </div>
+            <!-- /how__item -->
+
+        </div>
+        <!-- /how__list -->
+
+    </div>
+    <!-- /how -->
+
+    <!-- testimonials -->
+    <div class="testimonials" id="testimonials">
+
+        <!-- testimonials__title -->
+        <div class="testimonials__title">
+            What Our Clients Say
+        </div>
+        <!-- /testimonials__title -->
+        
+        <!-- testimonials__slider -->
+        <div class="testimonials__slider">
+            <div class="swiper-wrapper">
+                <div class="swiper-slide">
+                    <!-- testimonials__author -->
+                    <strong class="testimonials__author">
+                        <!-- testimonials__author-avatar -->
+                        <div class="testimonials__author-avatar">
+                            <img src="pic/authors/pic1.jpg" alt="Geremy Williams">
+                        </div>
+                        <!-- /testimonials__author-avatar -->
+                        <span>Geremy Williams,</span>
+                        <span>Miami, FL</span>
+                    </strong>
+                    <!-- /testimonials__author -->
+                    <p>
+                        My life is too busy to spend time figuring out the best diet or keeping in mind doctors advise
+                        and recommendations. Kaigo helps me get seamless access to better living: I always know how to
+                        eat, shop groceries and do my physics better. I wish I had Kaigo before.
+                    </p>
+                </div>
+                <div class="swiper-slide">
+                    <!-- testimonials__author -->
+                    <strong class="testimonials__author">
+                        <!-- testimonials__author-avatar -->
+                        <div class="testimonials__author-avatar">
+                            <img src="pic/authors/pic2.jpg" alt="Geremy Williams">
+                        </div>
+                        <!-- /testimonials__author-avatar -->
+                        <span>Geremy Williams,</span>
+                        <span>Miami, FL</span>
+                    </strong>
+                    <!-- /testimonials__author -->
+                    <p>
+                        My life is too busy to spend time figuring out the best diet or keeping in mind doctors advise
+                        and recommendations. Kaigo helps me get seamless access to better living: I always know how to
+                        eat, shop groceries and do my physics better. I wish I had Kaigo before.
+                    </p>
+                </div>
+                <div class="swiper-slide">
+                    <!-- testimonials__author -->
+                    <strong class="testimonials__author">
+                        <!-- testimonials__author-avatar -->
+                        <div class="testimonials__author-avatar">
+                            <img src="pic/authors/pic1.jpg" alt="Geremy Williams">
+                        </div>
+                        <!-- /testimonials__author-avatar -->
+                        <span>Geremy Williams,</span>
+                        <span>Miami, FL</span>
+                    </strong>
+                    <!-- /testimonials__author -->
+                    <p>
+                        My life is too busy to spend time figuring out the best diet or keeping in mind doctors advise
+                        and recommendations. Kaigo helps me get seamless access to better living: I always know how to
+                        eat, shop groceries and do my physics better. I wish I had Kaigo before.
+                    </p>
+                </div>
+            </div>
+
+            <div class="swiper-button-next"></div>
+            <div class="swiper-button-prev"></div>
+        </div>
+        <!-- /testimonials__slider -->
+
+    </div>
+    <!-- /testimonials -->
+
+    <!-- contact-us -->
+    <form action="#" class="contact-us" id="contact-us">
+
+        <!-- contact-us__title -->
+        <div class="contact-us__title">
+            START YOUR KAIGO EXPERIENCE
+        </div>
+        <!-- /contact-us__title -->
+
+        <!-- contact-us__wrap -->
+        <div class="contact-us__wrap">
+
+            <!-- contact-us__field -->
+            <div class="contact-us__field">
+                <select>
+                    <option value="0">Basic Plan (Free)</option>
+                    <option value="1">Basic Plan 1</option>
+                    <option value="2">Basic Plan 2</option>
+                    <option value="3">Basic Plan 3</option>
+                </select>
+            </div>
+            <!-- /contact-us__field -->
+
+            <!-- contact-us__double -->
+            <div class="contact-us__double">
+                <!-- contact-us__field -->
+                <div class="contact-us__field">
+                    <input type="text" name="firstName" placeholder="First name">
+                </div>
+                <!-- /contact-us__field -->
+                <!-- contact-us__field -->
+                <div class="contact-us__field">
+                    <input type="text" name="lastName" placeholder="Last name">
+                </div>
+                <!-- /contact-us__field -->
+            </div>
+            <!-- /contact-us__double -->
+
+            <!-- contact-us__double -->
+            <div class="contact-us__double">
+                <!-- contact-us__field -->
+                <div class="contact-us__field">
+                    <input type="email" name="email" placeholder="E-mail">
+                </div>
+                <!-- /contact-us__field -->
+                <!-- contact-us__field -->
+                <div class="contact-us__field">
+                    <input type="password" name="password" placeholder="Create password">
+                </div>
+                <!-- /contact-us__field -->
+            </div>
+            <!-- /contact-us__double -->
+
+            <!-- contact-us__field -->
+            <div class="contact-us__field">
+                <input type="tel" name="phone" placeholder="Phone number">
+            </div>
+            <!-- /contact-us__field -->
+        </div>
+        <!-- /contact-us__wrap -->
+
+        <button type="submit" class="btn">GET STARTED</button>
+
+    </form>
+    <!-- /contact-us -->
+
+    <!-- phone -->
+    <div class="phone" id="phone">
+
+        <!-- phone__title -->
+        <div class="phone__title">
+            Have questions? Call us now
+        </div>
+        <!-- /phone__title -->
+
+        <a href="tel:18883839900">1-888-383-9900</a>
+    </div>
+    <!-- /phone -->
+
+    <!-- site__footer -->
+    <footer class="site__footer">
+        <!-- logo -->
+        <a href="#" class="logo">
+            <img src="img/logo.png" alt="kaigo">
+        </a>
+        <!-- /logo -->
+
+        <!-- site__footer-menu -->
+        <nav class="site__footer-menu">
+            <a href="#">Home</a>
+            <a href="#">Gift Card</a>
+            <a href="#">Apply to be a partner</a>
+            <a href="#">Patient Log in</a>
+            <a href="#">Patient Sign Up</a>
+            <a href="#">About</a>
+        </nav>
+        <!-- /site__footer-menu -->
+
+        <!-- site__footer-copyright -->
+        <div class="site__footer-copyright">
+            © Kaigo Health, Inc. <span class="year">2017</span>
+        </div>
+        <!-- /site__footer-copyright -->
+    </footer>
+    <!-- /site__footer -->
+
+</div>
+<!-- /site -->
+
+<!-- popup -->
+<div class="popup">
+
+    <!-- popup__wrap -->
+    <div class="popup__wrap">
+
+        <!-- popup__content -->
+        <div class="popup__content popup__text">
+
+        </div>
+        <!-- /popup__content -->
+
+    </div>
+    <!-- /popup__wrap -->
+
+</div>
+<!-- /popup -->
 
 
-    <script src="js/vendors/jquery-2.2.1.min.js"></script>
-    <script src="js/index.min.js"></script>
+<script src="js/vendors/jquery-2.2.1.min.js"></script>
+<script src="js/vendors/swiper.jquery.min.js"></script>
+<script src="js/index.min.js"></script>
 </body>
 </html>
