desktop styles has done

--- a/app/index.html
+++ b/app/index.html
@@ -10,6 +10,7 @@
     <title>Title</title>
 
     <link rel="stylesheet" href="css/swiper.min.css">
+    <link rel="stylesheet" href="css/perfect-scrollbar.css">
     <link rel="stylesheet" href="css/index.css">
 
 </head>
@@ -339,8 +340,24 @@
                 </div>
             </div>
 
-            <div class="swiper-button-next"></div>
-            <div class="swiper-button-prev"></div>
+            <div class="swiper-button-next">
+                <svg viewBox="0 0 451.846 451.847" style="enable-background:new 0 0 451.846 451.847;"xml:space="preserve">
+                    <g>
+                        <path d="M345.441,248.292L151.154,442.573c-12.359,12.365-32.397,12.365-44.75,0c-12.354-12.354-12.354-32.391,0-44.744
+                            L278.318,225.92L106.409,54.017c-12.354-12.359-12.354-32.394,0-44.748c12.354-12.359,32.391-12.359,44.75,0l194.287,194.284
+                            c6.177,6.18,9.262,14.271,9.262,22.366C354.708,234.018,351.617,242.115,345.441,248.292z"/>
+                    </g>
+                </svg>
+            </div>
+            <div class="swiper-button-prev">
+                <svg viewBox="0 0 451.846 451.847" style="enable-background:new 0 0 451.846 451.847;"xml:space="preserve">
+                    <g>
+                        <path d="M345.441,248.292L151.154,442.573c-12.359,12.365-32.397,12.365-44.75,0c-12.354-12.354-12.354-32.391,0-44.744
+                            L278.318,225.92L106.409,54.017c-12.354-12.359-12.354-32.394,0-44.748c12.354-12.359,32.391-12.359,44.75,0l194.287,194.284
+                            c6.177,6.18,9.262,14.271,9.262,22.366C354.708,234.018,351.617,242.115,345.441,248.292z"/>
+                    </g>
+                </svg>
+            </div>
         </div>
         <!-- /testimonials__slider -->
 
@@ -352,7 +369,8 @@
 
         <!-- contact-us__title -->
         <div class="contact-us__title">
-            START YOUR KAIGO EXPERIENCE
+            START YOUR
+            <span>KAIGO EXPERIENCE</span>
         </div>
         <!-- /contact-us__title -->
 
@@ -366,6 +384,9 @@
                     <option value="1">Basic Plan 1</option>
                     <option value="2">Basic Plan 2</option>
                     <option value="3">Basic Plan 3</option>
+                    <option value="4">Basic Plan 4</option>
+                    <option value="5">Basic Plan 5</option>
+                    <option value="6">Basic Plan 6</option>
                 </select>
             </div>
             <!-- /contact-us__field -->
@@ -476,6 +497,7 @@
 
 
 <script src="js/vendors/jquery-2.2.1.min.js"></script>
+<script src="js/vendors/perfect-scrollbar.jquery.min.js"></script>
 <script src="js/vendors/swiper.jquery.min.js"></script>
 <script src="js/index.min.js"></script>
 </body>
