change texts and links

--- a/app/index.html
+++ b/app/index.html
@@ -131,7 +131,7 @@
             <p>Through collaboration, your team creates a personalized plan and delivers memorable experiences that
                 encourage you to live well, always.</p>
 
-            <a class="what__more" href="#">See what our community is saying</a>
+            <a class="what__more anchor" href="#testimonials">See what our community is saying</a>
         </div>
         <!-- /what__content -->
 
@@ -292,14 +292,17 @@
                             <img src="pic/authors/pic1.jpg" alt="Geremy Williams">
                         </div>
                         <!-- /testimonials__author-avatar -->
-                        <span>Geremy Williams,</span>
-                        <span>Miami, FL</span>
+                        <span>Michelle, L</span>
+                        <span>Washington D.C</span>
                     </strong>
                     <!-- /testimonials__author -->
                     <p>
-                        My life is too busy to spend time figuring out the best diet or keeping in mind doctors advise
-                        and recommendations. Kaigo helps me get seamless access to better living: I always know how to
-                        eat, shop groceries and do my physics better. I wish I had Kaigo before.
+                        Managing chronic illnesses and taking care of injuries that come up unexpectedly due to my
+                        condition is a lot to add to my already full plate.  I’m very busy, and having to go through
+                        several avenues in order to take care of myself was simply getting overwhelming! I came close to
+                        putting it all on a back burner before I became a Kaigo member. I am grateful to say that I am
+                        feeling better and on my way to optimal health. I don’t know what I’d do without my Kaigo
+                        Personal Health Concierge!"
                     </p>
                 </div>
                 <div class="swiper-slide">
@@ -310,14 +313,15 @@
                             <img src="pic/authors/pic2.jpg" alt="Geremy Williams">
                         </div>
                         <!-- /testimonials__author-avatar -->
-                        <span>Geremy Williams,</span>
-                        <span>Miami, FL</span>
+                        <span>Jimmy, M</span>
+                        <span>San Francisco, CA</span>
                     </strong>
                     <!-- /testimonials__author -->
                     <p>
-                        My life is too busy to spend time figuring out the best diet or keeping in mind doctors advise
-                        and recommendations. Kaigo helps me get seamless access to better living: I always know how to
-                        eat, shop groceries and do my physics better. I wish I had Kaigo before.
+                        "I couldn’t believe it had come to this, pleading with an insurance agent to let me go to
+                        therapy. I couldn’t bear the thought of having a stranger tell me that my condition was not
+                        legitimate. My Kaigo team was instrumental in dealing with our insurance company and helping me
+                        get through a very tough period in my life - true advocates!"
                     </p>
                 </div>
                 <div class="swiper-slide">
@@ -328,14 +332,13 @@
                             <img src="pic/authors/pic1.jpg" alt="Geremy Williams">
                         </div>
                         <!-- /testimonials__author-avatar -->
-                        <span>Geremy Williams,</span>
-                        <span>Miami, FL</span>
+                        <span>Dr. Garfield Clunie</span>
+                        <span>New York, N.Y</span>
                     </strong>
                     <!-- /testimonials__author -->
                     <p>
-                        My life is too busy to spend time figuring out the best diet or keeping in mind doctors advise
-                        and recommendations. Kaigo helps me get seamless access to better living: I always know how to
-                        eat, shop groceries and do my physics better. I wish I had Kaigo before.
+                        Kaigo is filling a much needed void in the healthcare system – personal interaction and
+                        collaboration. Kaigo makes this process possible and fun.
                     </p>
                 </div>
             </div>
