change texts and links

--- a/app/index.html
+++ b/app/index.html
@@ -277,7 +277,7 @@
 
         <!-- testimonials__title -->
         <div class="testimonials__title">
-            What Our Clients Say
+            See what our community is saying
         </div>
         <!-- /testimonials__title -->
         
@@ -372,7 +372,7 @@
 
         <!-- contact-us__title -->
         <div class="contact-us__title">
-            Enhance the way you live
+            Enhance the way <span>you live</span>
         </div>
         <!-- /contact-us__title -->
 
