check testimonial autor images

--- a/app/index.html
+++ b/app/index.html
@@ -289,7 +289,7 @@
                     <strong class="testimonials__author">
                         <!-- testimonials__author-avatar -->
                         <div class="testimonials__author-avatar">
-                            <img src="pic/authors/pic1.jpg" alt="Geremy Williams">
+                            <img src="pic/authors/pic1.png" alt="Geremy Williams">
                         </div>
                         <!-- /testimonials__author-avatar -->
                         <span>Michelle, L</span>
@@ -310,7 +310,7 @@
                     <strong class="testimonials__author">
                         <!-- testimonials__author-avatar -->
                         <div class="testimonials__author-avatar">
-                            <img src="pic/authors/pic2.jpg" alt="Geremy Williams">
+                            <img src="pic/authors/pic2.png" alt="Geremy Williams">
                         </div>
                         <!-- /testimonials__author-avatar -->
                         <span>Jimmy, M</span>
@@ -329,7 +329,7 @@
                     <strong class="testimonials__author">
                         <!-- testimonials__author-avatar -->
                         <div class="testimonials__author-avatar">
-                            <img src="pic/authors/pic1.jpg" alt="Geremy Williams">
+                            <img src="pic/authors/pic3.jpg" alt="Geremy Williams">
                         </div>
                         <!-- /testimonials__author-avatar -->
                         <span>Dr. Garfield Clunie</span>
