--- a/app/index.html
+++ b/app/index.html
@@ -101,13 +101,14 @@
         </div>
         <!-- /sign__title -->
 
-        <p>We built Kaigo to strengthen personal connections between you, those you care for and those that care for
-            you.</p>
+        <p>We built Kaigo to dramatically change the way healthcare is experienced, by fostering personal connections
+            between individuals and their community of doctors and wellness professionals.</p>
 
         <!-- sign__signature -->
         <div class="sign__signature">
-            <img src="img/sign-signature.png" alt="signature">
+            <img src="img/chima.png" alt="Chima">
             <strong>Chima U.</strong>
+            <a target="_blank" href="https://www.huffingtonpost.com/entry/57d06607e4b0f831f7068a41?timestamp=1473353393146">Read our cofounder’s story</a>
         </div>
         <!-- /sign__signature -->
     </div>
@@ -289,7 +290,7 @@
                     <strong class="testimonials__author">
                         <!-- testimonials__author-avatar -->
                         <div class="testimonials__author-avatar">
-                            <img src="pic/authors/pic1.png" alt="Geremy Williams">
+                            <img src="pic/authors/pic5.png" alt="Geremy Williams">
                         </div>
                         <!-- /testimonials__author-avatar -->
                         <span>Michelle, L</span>
@@ -339,6 +340,24 @@
                     <p>
                         Kaigo is filling a much needed void in the healthcare system – personal interaction and
                         collaboration. Kaigo makes this process possible and fun.
+                    </p>
+                </div>
+                <div class="swiper-slide">
+                    <!-- testimonials__author -->
+                    <strong class="testimonials__author">
+                        <!-- testimonials__author-avatar -->
+                        <div class="testimonials__author-avatar">
+                            <img src="pic/authors/pic4.png" alt="DR. KENNETH RICTOR">
+                        </div>
+                        <!-- /testimonials__author-avatar -->
+                        <span>DR. KENNETH RICTOR</span>
+                        <span>PRIMARY CARE PHYSICIAN, DPC</span>
+                        <span>SCOTLAND FAMILY MEDICINE</span>
+                    </strong>
+                    <!-- /testimonials__author -->
+                    <p>
+                        Kaigo helps me stay focused on what matters the most, getting patients more engaged and back to
+                        their optimal health. It’s a great partnership!
                     </p>
                 </div>
             </div>
