added block get started

--- a/app/index.html
+++ b/app/index.html
@@ -387,69 +387,85 @@
     <!-- /testimonials -->
 
     <!-- contact-us -->
-    <form action="#" class="contact-us" id="contact-us">
+    <!--<form action="#" class="contact-us" id="contact-us">-->
 
-        <!-- contact-us__title -->
-        <div class="contact-us__title">
-            Enhance the way <span>you live</span>
-        </div>
-        <!-- /contact-us__title -->
+        <!--&lt;!&ndash; contact-us__title &ndash;&gt;-->
+        <!--<div class="contact-us__title">-->
+            <!--Enhance the way <span>you live</span>-->
+        <!--</div>-->
+        <!--&lt;!&ndash; /contact-us__title &ndash;&gt;-->
 
-        <!-- contact-us__wrap -->
-        <div class="contact-us__wrap">
+        <!--&lt;!&ndash; contact-us__wrap &ndash;&gt;-->
+        <!--<div class="contact-us__wrap">-->
 
-            <!-- contact-us__field -->
-            <div class="contact-us__field">
-                <select>
-                    <option value="Health Partner">Health Partner</option>
-                    <option value="Member">Member</option>
-                </select>
-                <input class="contact-us__plan" type="hidden" name="plan">
-            </div>
-            <!-- /contact-us__field -->
+            <!--&lt;!&ndash; contact-us__field &ndash;&gt;-->
+            <!--<div class="contact-us__field">-->
+                <!--<select>-->
+                    <!--<option value="Health Partner">Health Partner</option>-->
+                    <!--<option value="Member">Member</option>-->
+                <!--</select>-->
+                <!--<input class="contact-us__plan" type="hidden" name="plan">-->
+            <!--</div>-->
+            <!--&lt;!&ndash; /contact-us__field &ndash;&gt;-->
 
-            <!-- contact-us__double -->
-            <div class="contact-us__double">
-                <!-- contact-us__field -->
-                <div class="contact-us__field">
-                    <input type="text" name="firstName" placeholder="First name" required>
-                </div>
-                <!-- /contact-us__field -->
-                <!-- contact-us__field -->
-                <div class="contact-us__field">
-                    <input type="text" name="lastName" placeholder="Last name" required>
-                </div>
-                <!-- /contact-us__field -->
-            </div>
-            <!-- /contact-us__double -->
+            <!--&lt;!&ndash; contact-us__double &ndash;&gt;-->
+            <!--<div class="contact-us__double">-->
+                <!--&lt;!&ndash; contact-us__field &ndash;&gt;-->
+                <!--<div class="contact-us__field">-->
+                    <!--<input type="text" name="firstName" placeholder="First name" required>-->
+                <!--</div>-->
+                <!--&lt;!&ndash; /contact-us__field &ndash;&gt;-->
+                <!--&lt;!&ndash; contact-us__field &ndash;&gt;-->
+                <!--<div class="contact-us__field">-->
+                    <!--<input type="text" name="lastName" placeholder="Last name" required>-->
+                <!--</div>-->
+                <!--&lt;!&ndash; /contact-us__field &ndash;&gt;-->
+            <!--</div>-->
+            <!--&lt;!&ndash; /contact-us__double &ndash;&gt;-->
 
-            <!-- contact-us__double -->
-            <div class="contact-us__double">
-                <!-- contact-us__field -->
-                <div class="contact-us__field">
-                    <input type="email" name="email" placeholder="E-mail" required>
-                </div>
-                <!-- /contact-us__field -->
-                <!-- contact-us__field -->
-                <div class="contact-us__field">
-                    <input type="password" name="password" placeholder="Create password" required>
-                </div>
-                <!-- /contact-us__field -->
-            </div>
-            <!-- /contact-us__double -->
+            <!--&lt;!&ndash; contact-us__double &ndash;&gt;-->
+            <!--<div class="contact-us__double">-->
+                <!--&lt;!&ndash; contact-us__field &ndash;&gt;-->
+                <!--<div class="contact-us__field">-->
+                    <!--<input type="email" name="email" placeholder="E-mail" required>-->
+                <!--</div>-->
+                <!--&lt;!&ndash; /contact-us__field &ndash;&gt;-->
+                <!--&lt;!&ndash; contact-us__field &ndash;&gt;-->
+                <!--<div class="contact-us__field">-->
+                    <!--<input type="password" name="password" placeholder="Create password" required>-->
+                <!--</div>-->
+                <!--&lt;!&ndash; /contact-us__field &ndash;&gt;-->
+            <!--</div>-->
+            <!--&lt;!&ndash; /contact-us__double &ndash;&gt;-->
 
-            <!-- contact-us__field -->
-            <div class="contact-us__field">
-                <input type="tel" name="phone" placeholder="Phone number" required>
-            </div>
-            <!-- /contact-us__field -->
-        </div>
-        <!-- /contact-us__wrap -->
+            <!--&lt;!&ndash; contact-us__field &ndash;&gt;-->
+            <!--<div class="contact-us__field">-->
+                <!--<input type="tel" name="phone" placeholder="Phone number" required>-->
+            <!--</div>-->
+            <!--&lt;!&ndash; /contact-us__field &ndash;&gt;-->
+        <!--</div>-->
+        <!--&lt;!&ndash; /contact-us__wrap &ndash;&gt;-->
 
-        <button type="submit" class="btn">GET STARTED</button>
+        <!--<button type="submit" class="btn">GET STARTED</button>-->
 
-    </form>
+    <!--</form>-->
     <!-- /contact-us -->
+
+    <!-- get-started -->
+    <div class="get-started">
+        <!-- get-started__title -->
+        <div class="get-started__title">
+            Ready to meet your community?
+            <span>Set up a free account</span>
+        </div>
+        <!-- /get-started__title -->
+
+        <p>Once we know what makes you tick, we’ll match you with a great team of ideal professionals in your community
+            that’ll take you on a journey of amazing wellness experiences.</p>
+
+        <a href="https://www.kaigocard.com/signup" target="_blank" class="btn">GET STARTED</a>
+    </div>
+    <!-- /get-started -->
 
     <!-- phone -->
     <div class="phone" id="phone">
